--- a/public/cross_slider.html
+++ b/public/cross_slider.html
@@ -90,18 +90,19 @@
     $(function () {
         "use strict";
 
-        var slideWidth = $('.slide-x').outerWidth(); // .slide-xの幅を取得して代入
         var slideNumX = $('.slide-x').length;  // .slide-xの数を取得して代入
         var slideNumY = $('.slide-y').length;  // .slide-yの数を取得して代入
-        slideNumX = slideNumX / slideNumY;
+        slideNumX = slideNumX / slideNumY;  // 1行あたりの.slide-xの数を求める
+        
+        var slideWidth = $('.slide-x').outerWidth(); // .slide-xの幅を取得して代入
         var slideSetWidth = slideWidth * slideNumX; // .slideの幅×数で求めた値を代入
         $('.slide-set').css('width', slideSetWidth); // .slideSetのスタイルシートにwidth: slideSetWidthを指定
-
+        
         var slideHeight = $('.slide-x').outerHeight(); // .slide-yの幅を取得して代入
         var slideSetHeight = slideHeight * slideNumY; // .slide-yの長さ×数で求めた値を代入
         $('.slide-set').css('height', slideSetHeight); // .slideSetのスタイルシートにwidth: slideSetHeightを指定
 
-        var slideCurrentX = 0; // 現在地を示す変数
+        var slideCurrentX = 0; // 現在地を示す変数X軸
         var slideCurrentY = 0; // 現在地を示す変数Y軸
 
         // アニメーションを実行する独自関数
@@ -118,7 +119,7 @@
                 slidingY();
 
                 // slideCurrentXがslideNumXを超えたら
-            } else if (slideCurrentX > slideNumX - 1) { // slideCUrrent >= slideNumXでも可
+            } else if (slideCurrentX > slideNumX - 1) { // slideCUrrentX >= slideNumXでも可
                 slideCurrentX = 0;
                 // 一番右下端か判定
                 if (slideCurrentY === slideNumY - 1) {
@@ -147,7 +148,7 @@
                 slidingX();
 
                 // slideCurrentYがslideNumYを超えたら
-            } else if (slideCurrentY > slideNumY - 1) { // slideCUrrent >= slideNumでも可
+            } else if (slideCurrentY > slideNumY - 1) { // slideCUrrentX >= slideNumでも可
                 slideCurrentY = 0;
                 // 一番右下端か判定
                 if (slideCurrentX === slideNumX - 1) {
