--- a/public/cross_slider.html
+++ b/public/cross_slider.html
@@ -100,7 +100,7 @@
         
         var slideHeight = $('.slide-x').outerHeight(); // .slide-yの幅を取得して代入
         var slideSetHeight = slideHeight * slideNumY; // .slide-yの長さ×数で求めた値を代入
-        $('.slide-set').css('height', slideSetHeight); // .slideSetのスタイルシートにwidth: slideSetHeightを指定
+        $('.slide-set').css('height', slideSetHeight); // .slideSetのスタイルシートにheight: slideSetHeightを指定
 
         var slideCurrentX = 0; // 現在地を示す変数X軸
         var slideCurrentY = 0; // 現在地を示す変数Y軸
